--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "solarized-ocean",
-    "displayName": "solarized-ocean",
-    "description": "The default Solarized theme from VsCode but with blue accents",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.52.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "contributes": {
-        "themes": [
-            {
-                "label": "Solarized Ocean",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Solarized Ocean-color-theme.json"
-            }
-        ]
-    }
+  "name": "solarized-ocean",
+  "displayName": "solarized-ocean",
+  "description": "The default Solarized theme from VsCode but with blue accents",
+  "version": "1.0.0",
+  "engines": {
+    "vscode": "^1.52.0"
+  },
+  "categories": [
+    "Themes"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/benjaminbenais/solarized-ocean"
+  },
+  "icon": "icon.png",
+  "contributes": {
+    "themes": [
+      {
+        "label": "Solarized Ocean",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Solarized Ocean-color-theme.json"
+      }
+    ]
+  }
 }
