--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solarized-ocean",
-  "displayName": "solarized-ocean",
+  "displayName": "Solarized Ocean",
   "description": "The default Solarized theme from VsCode but with blue accents",
   "version": "1.0.0",
   "engines": {
@@ -13,6 +13,7 @@
     "type": "git",
     "url": "https://github.com/benjaminbenais/solarized-ocean"
   },
+  "publisher": "benjaminbenais",
   "icon": "icon.png",
   "contributes": {
     "themes": [
